# Automatic-Driving

./: data_extraction.py
Automatic Driving/src/imitation_learning/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Automatic Driving/src/imitation_learning/imitation_learning/: imitaion_learning.py
Automatic Driving/src/imitation_learning/model/: pilotnetonly800_850_0.1.pth
Automatic Driving/src/imitation_learning/test/: imitation_learning_test.py
Automatic Driving/src/psaf_configuration/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_controller/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_firststeps/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_interfaces/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_lane_detection_inside/: 360-1560.yml  480-1680.yml  CMakeLists.txt  package.xml
Automatic Driving/src/psaf_lane_detection_inside/include/psaf_lane_detection_inside/: lane_detection_inside_node.hpp
Automatic Driving/src/psaf_lane_detection_inside/launch/: lane_detection_inside.launch.py
Automatic Driving/src/psaf_lane_detection_inside/src/: lane_detection_inside.cpp  lane_detection_inside_node.cpp
Automatic Driving/src/psaf_lane_detection_inside/test/: lane_detection_test.cpp
Automatic Driving/src/psaf_lane_detection_outside/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_launch/: package.xml
Automatic Driving/src/psaf_startbox/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_trajectory_plan/: CMakeLists.txt  package.xml
Automatic Driving/src/psaf_trajectory_plan/config/: psaf_lane_detection.yaml
Automatic Driving/src/psaf_trajectory_plan/include/psaf_trajectory_plan/: trajectory_plan_node.hpp
Automatic Driving/src/psaf_trajectory_plan/launch/: trajectory_plan.launch.py
Automatic Driving/src/psaf_trajectory_plan/src/: trajectory_plan.cpp  trajectory_plan_node.cpp
Automatic Driving/src/psaf_trajectory_plan/test/: trajectory_plan_test.cpp
Automatic Driving/src/road_sign_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Automatic Driving/src/road_sign_detector/road_sign_detector/: road_sign_detector.py
Automatic Driving/src/road_sign_detector/test/: road_sign_detector_test.py
Imitation Learning/: pilotnet.py
Imitation Learning/my_data/: metadata.yaml
Reinforcement Learning/car_world_reset_node/: CMakeLists.txt  package.xml
Reinforcement Learning/car_world_reset_node/include/car_world_reset_node/: position_node.hpp  reset_node.hpp
Reinforcement Learning/car_world_reset_node/launch/: nodes_launch.py
Reinforcement Learning/car_world_reset_node/src/: position_node.cpp  position_node_main.cpp  reset_node.cpp  reset_node_main.cpp
Reinforcement Learning/gazebo_rl/: package.xml  setup.py
Reinforcement Learning/gazebo_rl/gazebo_rl/: call_reset.py  gazebo_env.py  (+1 more)
Reinforcement Learning/simulation_environment/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  bridge_sequence  package.xml  test.sdf
Reinforcement Learning/simulation_environment/Track_process/: centroids_world.json  ideal trajectory.py  sorted_points.json  world coordinate.py
Reinforcement Learning/simulation_environment/car/: model.config  model.sdf
Reinforcement Learning/simulation_environment/car_old/: model.config  model.sdf
Reinforcement Learning/simulation_environment/cross/: cross.sdf  model.config
Reinforcement Learning/simulation_environment/cross/meshes/: cross.dae
Reinforcement Learning/simulation_environment/cross_calibrate/: cross_calibrate.sdf  model.config
Reinforcement Learning/simulation_environment/cross_calibrate/meshes/: cross_calibrate.dae
Reinforcement Learning/simulation_environment/curve/: curve.sdf  model.config
Reinforcement Learning/simulation_environment/curve/meshes/: curve.dae
Reinforcement Learning/simulation_environment/data/: centroids.json  world_coordinates.json
Reinforcement Learning/simulation_environment/docs/Entwicklerdokumentation/: Entwicklerdokumentation.adoc  Entwicklerdokumentation.html  car_models.adoc  communication.adoc  plugin.adoc  ros_bridge.adoc  simulation_options.adoc  start.adoc
Reinforcement Learning/simulation_environment/env/: FurutaPendulum.py  base.py  gazebo_env.py  ign_subscribe.py  sort.py  stable_jax.py  test.py  test_service.py
Reinforcement Learning/simulation_environment/gui/: button.py
Reinforcement Learning/simulation_environment/include/: TestDiffDrive.hh  TestDiffDrive_new.hh  translator_node.hpp
Reinforcement Learning/simulation_environment/launch/: new_car.launch.py  old_car.launch.py
Reinforcement Learning/simulation_environment/materials/scripts/: plane.material
Reinforcement Learning/simulation_environment/nodes/: 4_wheeled_simple.sdf  CMakeLists.txt  lidar_node.cc  lidar_node_new.cc  old_model_copy.sdf  real_time_node.cc
Reinforcement Learning/simulation_environment/oval_track/: oval_strecke.dae
Reinforcement Learning/simulation_environment/shaped_track/: shaped_track.dae
Reinforcement Learning/simulation_environment/shaped_track_2/: shaped_track_2.dae
Reinforcement Learning/simulation_environment/simulation_carolo_cup/: complex_world.sdf
Reinforcement Learning/simulation_environment/simulation_projektseminar/: old_model_complete.sdf
Reinforcement Learning/simulation_environment/src/: SampleSystem2.cc  TestDiffDrive.cc  TestDiffDrive_new.cc  translator_node.cpp  translator_node_node.cpp
Reinforcement Learning/simulation_environment/start_box/: model.config  start_box.sdf
Reinforcement Learning/simulation_environment/start_box/meshes/: start_box.dae
Reinforcement Learning/simulation_environment/stop_sign/: model.config  model.sdf
Reinforcement Learning/simulation_environment/stop_sign/meshes/: stop_sign.dae  stop_sign_2.dae  untitled.dae
Reinforcement Learning/simulation_environment/straight/: model.config  straight.sdf
Reinforcement Learning/simulation_environment/straight/meshes/: straight.dae
Reinforcement Learning/simulation_environment/strasse/: model.config  model.sdf
Reinforcement Learning/simulation_environment/strasse/meshes/: strasse.dae
(+46 files in other folders)
